[package]
name = "rust_grapher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meval = "0.2.0"
egui = "0.31.1"
eframe = { version = "0.31.1", features = ["x11"] }
egui_plot = "0.32.1"
glam = "0.30.3"